add GetAvailableRoomsCommand